--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*MEDIA QUERIES*/
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 300px) { /*potentially do not need this?*/
     body{
       margin: 0;
       padding: 0;
@@ -8,15 +8,7 @@
       overflow-x: hidden;
     }
     .hero-image{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/img2.jpg") ;
-        height: 300px;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size:cover;
-        position: relative;
-        width: 100%;
-        overflow-x: hidden;
-        overflow-y: hidden;
+        
       
       }
       
@@ -47,7 +39,102 @@
       height: 400px;
       width: 100%;
       }
+
+      .wrapper{
+        width: 100%;
+        padding: 0;
+        margin: 0 0 0 5%;
+      }
+      .wrapper form{
+        margin:0;
+      }
+      
+      .currency{
+        font-size: 160%;
+      }
+      
+      .amount{
+        width: 80%;
+      }
+      
+      
+      h5{
+        font-size: 190%;  
+        font-family: 'Ephesis', cursive;
+        margin:10px 0 0 8%;
+      
+      }
+      
+      
+      #amount{
+        height: 100%;
+        font-size: 15px;
+        width: 90%;
+      }
+      
+      form .drop-list{
+       justify-content: space-around;
+        margin: 0;
+        padding-right: 10%;
+      }
+      
+      .drop-list .select-box {
+        height:25%;
+        width: 110%;
+        padding: 6%;
+        }
+      
+        .drop-list .icon{
+          font-size: 10px;
+          margin-top: 25%;
+          padding: 0 0 0 5%;
+        }
+      
+        .select-box select{
+          font-size: 8px;
+        }
+      
+        .select-box img{
+          max-width: 15px;
+        }
+      
+        form .exchange-rate{
+          font-size: 14px;
+          margin-left: 9%;
+        }
+      
+        form button{
+          height: 30px;
+          width: 80%;
+          margin: 0 5% 0 8%;
+        }
+
+      footer{
+        display: flex;
+        flex-direction: row;
+     }
+      
+      ul#social-networks{
+      display: flex;
+      list-style-type:none;   
+      padding: 0;
+      
+      }
+      
+      ul#social-networks li {
+        display:flex;
+        padding-left: 35%;
+        padding-right: 35%;
+        font-size: 20px;
+        
+      }
+      
+      .fa-brands,
+      .fa-regular {
+        color:#463c7b
+      } 
+      
+      
     
     
-  
     }
