added images for responsivness and testing of the site and removed images and videos which are not being used within the site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
       overflow-x: hidden;
     }
 
+    .video{
+min-height: 100%;
+min-width: 100%;
+    }
+
 .navButton{
   padding:0.5em 1em;
   margin:0.25em;
