--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
     }
 
     .video{
-min-height: 100%;
-min-width: 100%;
+      height: 100%;
+      width: 100%;
     }
 
 .navButton{
@@ -205,6 +205,7 @@ ul#social-networks li {
         display: flex;
         width:50%;
         margin:5%;
+        
       }
 
       input[type=checkbox]:checked + label.strikethrough{
@@ -232,7 +233,7 @@ ul#social-networks li {
         display: inline; 
       }
 
-      .bucketButton{
+      #bucketButton{
         width: 100px;
         font-size: 80%;
         margin-left: 2%;
@@ -381,6 +382,7 @@ ul#social-networks li {
           margin:5%;
           flex-direction: row;
           justify-content: flex-end;
+          margin-top: 3%;
 
         }
   
